--- a/contect.html
+++ b/contect.html
@@ -51,11 +51,13 @@
               type="text"
               name="username"
               id=""
+              autocomplete="off"
               required
               placeholder="Name"
             style="margin-top: 20px;"
             /></center>
            <center> <input
+                      autocomplete="off"
               type="email"
               name="email"
               required
@@ -64,10 +66,10 @@
             /></center>
           </div>
           <center><div>
-            <input type="text" name="subject" placeholder="Subject" />
+            <input type="text" name="subject" placeholder="Subject" autocomplete="off" />
           </div></center>
          <center> <div>
-            <textarea name="message" id="" placeholder="Message"></textarea>
+            <textarea name="message" id="" placeholder="Message" autocomplete="off" ></textarea>
           </div></center>
           <center><div>
             <input type="submit" value="send message" class="btn" style="cursor: pointer; color: white; background: dodgerblue; border-radius: 100px; height: 60px; width: 200px; margin-bottom: 20px;" />
