--- a/contect.html
+++ b/contect.html
@@ -72,8 +72,8 @@
             <textarea name="message" id="" placeholder="Message" autocomplete="off" ></textarea>
           </div></center>
           <center><div>
-            <a href="contect.html" target="blank"><input type="submit" value="send message" class="btn" style="cursor: pointer; color: white; background: dodgerblue; border-radius: 100px; height: 60px; width: 200px; margin-bottom: 20px;" />
-            </a>
+            <input type="submit" value="send message" class="btn" style="cursor: pointer; color: white; background: dodgerblue; border-radius: 100px; height: 60px; width: 200px; margin-bottom: 20px;" />
+            
           </div></center>
         </form>
       </div>
