--- a/card.html
+++ b/card.html
@@ -238,7 +238,8 @@
         </nav>
       </div>
     </div>
-    <button class="flex mx-auto mt-16 text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">Contact for Buy</button>
+    <a href="contect.html" target="_blank"><button class="flex mx-auto mt-16 text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">Contact for Buy</button>
+    </a>
   </div>
 </section>
 <footer class="text-gray-600 body-font">
