--- a/contect.html
+++ b/contect.html
@@ -17,7 +17,7 @@
 
     
   </head>
-  <body>
+  <body style="background:black">
    <header class="text-gray-600 body-font">
   <div class="container mx-auto flex flex-wrap  flex-col md:flex-row p-5 items-center">
     <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
