--- a/card.html
+++ b/card.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>GODMC</title>
 </head>
-<body style="background:black">
+<body style="background:black; color:white;>
 
 <header class="text-gray-600 body-font">
   <div class="container mx-auto flex flex-wrap  flex-col md:flex-row p-5 items-center">
