--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <span class="ml-3 text-xl"><img src="logo.jpg" width="50px " height="auto"></span>
     </a>
     <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-      <a class="mr-5 hover:text-gray-900" href="https://discord.gg/NbxBaEYTty" target="blank">Discord server</a>
+      <a class="mr-5 hover:text-gray-900" href="https://discord.gg/fZKpGMEhF3" target="blank">Discord server</a>
       <a class="mr-5 hover:text-gray-900" href="card.html" target="blank">Buy Ranks</a>
       <a class="mr-5 hover:text-gray-900" href="https://minecraftservers.org/vote/651417" target="blank">Vote server</a>
     
