--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <center><h1 style="font-size: 40px;">More</h1>
       <hr style="height:20px; width: 100px; colour: black;"></center>
         <center><div class="cont">
-            <button class="btn"><a href="https://discord.gg/NbxBaEYTty" target="blank" >Join Discord</a></button><br><br>
+            <button class="btn"><a href="https://discord.gg/fZKpGMEhF3" target="blank" >Join Discord</a></button><br><br>
             <button class="btn"><a href="card.html" target="blank" >Buy Ranks</a></button><br><br>
             <button class="btn"><a href="https://minecraftservers.org/vote/651417" target="blank" >Vote Server</a></button><br><br>
 
@@ -72,7 +72,7 @@
       <img src="logo.jpg" style="width:50px; height:auto">
       <span class="ml-3 text-xl">GODMC</span>
     </a>
-    <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">© 2020 ANJIYKSPERO —
+    <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">© 2020 ANJIYKSPERO PRIVATE LIMITED —
       <a href="https://twitter.com/knyttneve" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@! 𝐋𝐇 么 yatharth1002</a>
     </p>
     </div>
